Fixed edit button on all pages.

--- a/pages/qewd/qewd-training.html
+++ b/pages/qewd/qewd-training.html
@@ -3,6 +3,8 @@ title: QEWD - Training Links
 keywords: QEWD
 sidebar: home_sidebar
 permalink: qewd_training.html
+folder: qewd
+filename: qewd-training.html
 ---
 
 
