--- a/pages/qewd/qewd_architecture.html
+++ b/pages/qewd/qewd_architecture.html
@@ -3,6 +3,8 @@ title: QEWD - Architectural Overview
 keywords: QEWD
 sidebar: home_sidebar
 permalink: qewd_architecture.html
+folder: qewd
+filename: qewd_architecture.html
 ---
 
 
