--- a/pages/qewd/qewd-training.html
+++ b/pages/qewd/qewd-training.html
@@ -78,7 +78,11 @@ filename: qewd-training.html
               <li><a href="http://www.slideshare.net/robtweed/ewd-3-training-course-part-38-building-a-reactjs-application-with-qewd-part-4" target="slideshare">Part 40: Building a React.js-based QEWD Application - Part 4</a></li>
               <li><a href="http://www.slideshare.net/robtweed/ewd-3-training-course-part-41-building-a-reactjs-application-with-qewd-part-5" target="slideshare">Part 41: Building a React.js-based QEWD Application - Part 5</a></li>
               <li><a href="http://www.slideshare.net/robtweed/ewd-3-training-course-part-42-the-qewd-docker-appliance" target="slideshare">Part 42: The QEWD Docker Appliance</a></li>
-            </ul>
+              <li><a href="https://www.slideshare.net/robtweed/ewd-3-training-course-part-43-using-json-web-tokens-with-qewd-rest-services" target="slideshare">Part 43: Using JSON Web Tokens with QEWD REST Services</a></li>
+              <li><a href="https://www.slideshare.net/robtweed/ewd-3-training-course-part-44-creating-microservices-with-qewdjs" target="slideshare">Part 44: Creating MicroServices with QEWD.js</a></li>
+              <li><a href="https://www.slideshare.net/robtweed/ewd-3-training-course-part-45-using-qewds-advanced-microservice-functionality" target="slideshare">Part 45: Using QEWD's Advanced MicroService Functionality</a></li>
+
+	    </ul>
           </div>
         
 	</div>
