--- a/pages/qewd/qewd-training.html
+++ b/pages/qewd/qewd-training.html
@@ -1,5 +1,5 @@
 ---
-title: QEWD - Training Resources
+title: QEWD Online Training Course
 keywords: QEWD
 sidebar: home_sidebar
 permalink: qewd_training.html
@@ -19,9 +19,7 @@ filename: qewd-training.html
     <section id="Docs">
       <div id="contact-content">
         <div class="col-md-9">
-          <h1>Online Training Course</h1>
           <p>
-            <b>Training Material:<br> </b>
             This online training course consists of a set of free-to-use presentation slide decks that explain
 	    every aspect of QEWD, step by step, complete with example code that you can try out for yourself.
           </p>
