--- a/pages/qewd/qewd-training.html
+++ b/pages/qewd/qewd-training.html
@@ -24,9 +24,9 @@ filename: qewd-training.html
 	    every aspect of QEWD, step by step, complete with example code that you can try out for yourself.
           </p>
           <ul>
-            <li><a href="http://www.slideshare.net/robtweed/how-nodejs-integrates-with-the-cache-database" target="slideshare">Part 1: Aligning the power of Node.js & with the power of "Global" (NoSQL+SQL) Databases</a></li>
-            <li><a href="http://www.slideshare.net/robtweed/ewd-3-overview" target="slideshare">Part 2: The background to QEWDjs - Engineering EWD3</a></li>
-            <li><a href="http://www.slideshare.net/robtweed/summary-of-ewd-3-modules" target="slideshare">Part 3: Summary of EWD3 Modules</a></li>
+            <li><a href="http://www.slideshare.net/robtweed/how-nodejs-integrates-with-the-cache-database" target="slideshare">Part 1: Integrating Node.js With "Global Storage" NoSQL Databases</a></li>
+            <li><a href="http://www.slideshare.net/robtweed/ewd-3-overview" target="slideshare">Part 2: The Building Blocks of QEWD.js</a></li>
+            <li><a href="http://www.slideshare.net/robtweed/summary-of-ewd-3-modules" target="slideshare">Part 3: Summary of the Modules Underpinning QEWD.js</a></li>
             <li><a href="http://www.slideshare.net/robtweed/installing-configuring-ewdxpress" target="slideshare">Part 4: Installing and Configuring QEWDjs</a></li>
             <li><a href="http://www.slideshare.net/robtweed/ewd-3-training-course-part-5-first-steps-in-building-an-ewdxpress-application" target="slideshare">Part 5a: Building a QEWD Application - 1st Steps (Using Windows and Cach&eacute;</a></li>
             <li><a href="http://www.slideshare.net/robtweed/ewd-3-training-course-part-5b-first-steps-in-building-a-qewd-application" target="slideshare">Part 5b: Building a QEWD Application - 1st Steps (Using Linux or Raspberry Pi</a></li>
