--- a/pages/qewd/qewd-training.html
+++ b/pages/qewd/qewd-training.html
@@ -23,6 +23,29 @@ filename: qewd-training.html
             This online training course consists of a set of free-to-use presentation slide decks that explain
 	    every aspect of QEWD, step by step, complete with example code that you can try out for yourself.
           </p>
+		
+          <p>
+            if you're interesting in using QEWD.js to create interactive, browser-based applications, and using
+            QEWD.js as a full-stack framework, you can start at Part 4 and proceed through to part 30.  Parts
+            32, 34 and 35 should also be consulted if you're an advanced user.
+          </p>
+		
+          <p>
+            if you're interesting in using QEWD.js to create a set of REST APIs,
+            you can start with Part 4 and then skip to Part 31. You should also take parts 32 abd 33.
+		  
+            You should also study parts 17 - 27 which explains the details of the uniquely powerful
+            integrated database, how it works and how to make use of it.
+		  
+            If you then want to find out about using QEWD.js REST-based MicroServices, take parts 43, 44 and 45.
+          </p>
+		
+          <p>
+            if you're interested in creating a React.js-based application that uses QEWD.js,
+            take parts 37 through to 41.
+          </p>
+		<p></p>
+		
           <ul>
             <li><a href="http://www.slideshare.net/robtweed/how-nodejs-integrates-with-the-cache-database" target="slideshare">Part 1: Integrating Node.js With "Global Storage" NoSQL Databases</a></li>
             <li><a href="http://www.slideshare.net/robtweed/ewd-3-overview" target="slideshare">Part 2: The Building Blocks of QEWD.js</a></li>
@@ -30,7 +53,7 @@ filename: qewd-training.html
             <li><a href="http://www.slideshare.net/robtweed/installing-configuring-ewdxpress" target="slideshare">Part 4: Installing and Configuring QEWDjs</a></li>
             <li><a href="http://www.slideshare.net/robtweed/ewd-3-training-course-part-5-first-steps-in-building-an-ewdxpress-application" target="slideshare">Part 5a: Building a QEWD Application - 1st Steps (Using Windows and Cach&eacute;</a></li>
             <li><a href="http://www.slideshare.net/robtweed/ewd-3-training-course-part-5b-first-steps-in-building-a-qewd-application" target="slideshare">Part 5b: Building a QEWD Application - 1st Steps (Using Linux or Raspberry Pi</a></li>
-            <li><a href="http://www.slideshare.net/robtweed/ewd-3-training-course-part-6-what-happens-when-an-ewdxpress-application-is-started" target="slideshare">Part 6: WHat Happens when a QEWD Application is Started</a></li
+            <li><a href="http://www.slideshare.net/robtweed/ewd-3-training-course-part-6-what-happens-when-an-ewdxpress-application-is-started" target="slideshare">Part 6: What Happens when a QEWD Application is Started</a></li
             <li><a href="http://www.slideshare.net/robtweed/ewd-3-training-course-part-7-applying-the-ewdxpress-messaging-pattern" target="slideshare">Part 7: Applying the QEWD Message Pattern</a></li>
             <li><a href="http://www.slideshare.net/robtweed/ewd-3-training-course-part-8-anatomy-of-the-ewdxpress-messaging-cycle" target="slideshare">Part 8: Anatomy of the QEWD Message Cycle</a></li>
             <li><a href="http://www.slideshare.net/robtweed/ewd-3-training-course-part-9-complex-ewdxpress-messages-and-responses" target="slideshare">Part 9: Complex QEWD Messages and Responses</a></li>
