--- a/pages/qewd/qewd-training.html
+++ b/pages/qewd/qewd-training.html
@@ -23,15 +23,16 @@ filename: qewd-training.html
             This online training course consists of a set of free-to-use presentation slide decks that explain
 	    every aspect of QEWD, step by step, complete with example code that you can try out for yourself.
           </p>
-		
+          <h3>Interactive Applications></h3>
           <p>
-            if you're interesting in using QEWD.js to create interactive, browser-based applications, and using
+            If you're interesting in using QEWD.js to create interactive, browser-based applications, and using
             QEWD.js as a full-stack framework, you can start at Part 4 and proceed through to part 30.  Parts
             32, 34 and 35 should also be consulted if you're an advanced user.
           </p>
-		
+
+          <h3>REST APIs></h3>
           <p>
-            if you're interesting in using QEWD.js to create a set of REST APIs,
+            If you're interesting in using QEWD.js to create a set of REST APIs,
             you can start with Part 4 and then skip to Part 31. You should also take parts 32 abd 33.
 		  
             You should also study parts 17 - 27 which explains the details of the uniquely powerful
@@ -40,8 +41,9 @@ filename: qewd-training.html
             If you then want to find out about using QEWD.js REST-based MicroServices, take parts 43, 44 and 45.
           </p>
 		
+          <h3>React.js & QEWD.js></h3>		
           <p>
-            if you're interested in creating a React.js-based application that uses QEWD.js,
+            If you're interested in creating a React.js-based application that uses QEWD.js,
             take parts 37 through to 41.
           </p>
 		<p></p>
