--- a/pages/qewd/qewd-training.html
+++ b/pages/qewd/qewd-training.html
@@ -5,6 +5,7 @@ sidebar: home_sidebar
 permalink: qewd_training.html
 folder: qewd
 filename: qewd-training.html
+toc: false
 ---
 
 <!doctype html>
@@ -23,14 +24,14 @@ filename: qewd-training.html
             This online training course consists of a set of free-to-use presentation slide decks that explain
 	    every aspect of QEWD, step by step, complete with example code that you can try out for yourself.
           </p>
-          <h3>Interactive Applications></h3>
+          <h3>Interactive Applications</h3>
           <p>
             If you're interesting in using QEWD.js to create interactive, browser-based applications, and using
             QEWD.js as a full-stack framework, you can start at Part 4 and proceed through to part 30.  Parts
             32, 34 and 35 should also be consulted if you're an advanced user.
           </p>
 
-          <h3>REST APIs></h3>
+          <h3>REST APIs</h3>
           <p>
             If you're interesting in using QEWD.js to create a set of REST APIs,
             you can start with Part 4 and then skip to Part 31. You should also take parts 32 abd 33.
@@ -41,7 +42,7 @@ filename: qewd-training.html
             If you then want to find out about using QEWD.js REST-based MicroServices, take parts 43, 44 and 45.
           </p>
 		
-          <h3>React.js & QEWD.js></h3>		
+          <h3>React.js & QEWD.js</h3>		
           <p>
             If you're interested in creating a React.js-based application that uses QEWD.js,
             take parts 37 through to 41.
