--- a/pages/qewd/qewd-training.html
+++ b/pages/qewd/qewd-training.html
@@ -47,7 +47,8 @@ toc: false
             If you're interested in creating a React.js-based application that uses QEWD.js,
             take parts 37 through to 41.
           </p>
-		<p></p>
+		
+          <h3>Training Slide Decks</h3>
 		
           <ul>
             <li><a href="http://www.slideshare.net/robtweed/how-nodejs-integrates-with-the-cache-database" target="slideshare">Part 1: Integrating Node.js With "Global Storage" NoSQL Databases</a></li>
