--- a/pages/qewd/qewd-training.html
+++ b/pages/qewd/qewd-training.html
@@ -35,10 +35,12 @@ toc: false
           <p>
             If you're interesting in using QEWD.js to create a set of REST APIs,
             you can start with Part 4 and then skip to Part 31. You should also take parts 32 abd 33.
-		  
-            You should also study parts 17 - 27 which explains the details of the uniquely powerful
+          </p>
+          <p>
+            It's recommended that you also study parts 17 - 27 which explain the details of the uniquely powerful
             integrated database, how it works and how to make use of it.
-		  
+          </p>
+          <p>		  
             If you then want to find out about using QEWD.js REST-based MicroServices, take parts 43, 44 and 45.
           </p>
 		
